docs/api/qiskit/0.29/qiskit.opflow.OperatorBase.mdx
---
title: OperatorBase (v0.29)
description: API reference for qiskit.opflow.OperatorBase in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.OperatorBase
---

# OperatorBase

<Class id="qiskit.opflow.OperatorBase" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/opflow/operator_base.py" signature="OperatorBase" modifiers="class">
  Bases: `qiskit.opflow.mixins.star_algebra.StarAlgebraMixin`, `qiskit.opflow.mixins.tensor.TensorMixin`, `abc.ABC`

  A base class for all Operators: PrimitiveOps, StateFns, ListOps, etc. Operators are defined as functions which take one complex binary function to another. These complex binary functions are represented by StateFns, which are themselves a special class of Operators taking only the `Zero` StateFn to the complex binary function they represent.

  Operators can be used to construct complicated functions and computation, and serve as the building blocks for algorithms.

  ## Methods Defined Here

  <span id="qiskit-opflow-operatorbase-add" />

  ### add

  <Function id="qiskit.opflow.OperatorBase.add" signature="OperatorBase.add(other)" modifiers="abstract">
    Return Operator addition of self and other, overloaded by `+`.

    **Parameters**

    **other** (`OperatorBase`) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the sum of self and other.
  </Function>

  <span id="qiskit-opflow-operatorbase-adjoint" />

  ### adjoint

  <Function id="qiskit.opflow.OperatorBase.adjoint" signature="OperatorBase.adjoint()" modifiers="abstract">
    Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`. For StateFns, this also turns the StateFn into a measurement.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the adjoint of self.
  </Function>

  <span id="qiskit-opflow-operatorbase-assign-parameters" />

  ### assign\_parameters

  <Function id="qiskit.opflow.OperatorBase.assign_parameters" signature="OperatorBase.assign_parameters(param_dict)" modifiers="abstract">
    Binds scalar values to any Terra `Parameters` in the coefficients or primitives of the Operator, or substitutes one `Parameter` for another. This method differs from Terra’s `assign_parameters` in that it also supports lists of values to assign for a give `Parameter`, in which case self will be copied for each parameterization in the binding list(s), and all the copies will be returned in an `OpList`. If lists of parameterizations are used, every `Parameter` in the param\_dict must have the same length list of parameterizations.

    **Parameters**

    **param\_dict** (`Dict`\[`ParameterExpression`, `Union`\[`complex`, `ParameterExpression`, `List`\[`Union`\[`complex`, `ParameterExpression`]]]]) – The dictionary of `Parameters` to replace, and values or lists of values by which to replace them.

    **Return type**

    `OperatorBase`

    **Returns**

    The `OperatorBase` with the `Parameters` in self replaced by the values or `Parameters` in param\_dict. If param\_dict contains parameterization lists, this `OperatorBase` is an `OpList`.
  </Function>

  <span id="qiskit-opflow-operatorbase-bind-parameters" />

  ### bind\_parameters

  <Function id="qiskit.opflow.OperatorBase.bind_parameters" signature="OperatorBase.bind_parameters(param_dict)">
    Same as assign\_parameters, but maintained for consistency with QuantumCircuit in Terra (which has both assign\_parameters and bind\_parameters).

    **Return type**

    `OperatorBase`
  </Function>

  <span id="qiskit-opflow-operatorbase-compose" />

  ### compose

  <Function id="qiskit.opflow.OperatorBase.compose" signature="OperatorBase.compose(other, permutation=None, front=False)" modifiers="abstract">
    Return Operator Composition between self and other (linear algebra-style: A\@B(x) = A(B(x))), overloaded by `@`.

    Note: You must be conscious of Quantum Circuit vs. Linear Algebra ordering conventions. Meaning, X.compose(Y) produces an X∘Y on qubit 0, but would produce a QuantumCircuit which looks like

    > -\[Y]-\[X]-

    Because Terra prints circuits with the initial state at the left side of the circuit.

    **Parameters**

    *   **other** (`OperatorBase`) – The `OperatorBase` with which to compose self.
    *   **permutation** (`Optional`\[`List`\[`int`]]) – `List[int]` which defines permutation on other operator.
    *   **front** (`bool`) – If front==True, return `other.compose(self)`.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the function composition of self and other.
  </Function>

  <span id="qiskit-opflow-operatorbase-copy" />

  ### copy

  <Function id="qiskit.opflow.OperatorBase.copy" signature="OperatorBase.copy()">
    Return a deep copy of the Operator.

    **Return type**

    `OperatorBase`
  </Function>

  <span id="qiskit-opflow-operatorbase-equals" />

  ### equals

  <Function id="qiskit.opflow.OperatorBase.equals" signature="OperatorBase.equals(other)" modifiers="abstract">
    Evaluate Equality between Operators, overloaded by `==`. Only returns True if self and other are of the same representation (e.g. a DictStateFn and CircuitStateFn will never be equal, even if their vector representations are equal), their underlying primitives are equal (this means for ListOps, OperatorStateFns, or EvolvedOps the equality is evaluated recursively downwards), and their coefficients are equal.

    **Parameters**

    **other** (`OperatorBase`) – The `OperatorBase` to compare to self.

    **Return type**

    `bool`

    **Returns**

    A bool equal to the equality of self and other.
  </Function>

  <span id="qiskit-opflow-operatorbase-eval" />

  ### eval

  <Function id="qiskit.opflow.OperatorBase.eval" signature="OperatorBase.eval(front=None)" modifiers="abstract">
    Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

    If `front` is None, the matrix-representation of the operator is returned.

    **Parameters**

    **front** (`Union`\[`str`, `Dict`\[`str`, `complex`], `ndarray`, `OperatorBase`, `Statevector`, `None`]) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function, or None.

    **Return type**

    `Union`\[`OperatorBase`, `complex`]

    **Returns**

    The output of the Operator’s evaluation function. If self is a `StateFn`, the result is a float or complex. If self is an Operator (`PrimitiveOp, ComposedOp, SummedOp, EvolvedOp,` etc.), the result is a StateFn. If `front` is None, the matrix-representation of the operator is returned, which is a `MatrixOp` for the operators and a `VectorStateFn` for state-functions. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.
  </Function>

  <span id="qiskit-opflow-operatorbase-mul" />

  ### mul

  <Function id="qiskit.opflow.OperatorBase.mul" signature="OperatorBase.mul(scalar)" modifiers="abstract">
    Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`).

    **Parameters**

    **scalar** (`Union`\[`complex`, `ParameterExpression`]) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to product of self and scalar.
  </Function>

  <span id="qiskit-opflow-operatorbase-neg" />

  ### neg

  <Function id="qiskit.opflow.OperatorBase.neg" signature="OperatorBase.neg()">
    Return the Operator’s negation, effectively just multiplying by -1.0, overloaded by `-`.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the negation of self.
  </Function>

  <span id="qiskit-opflow-operatorbase-permute" />

  ### permute

  <Function id="qiskit.opflow.OperatorBase.permute" signature="OperatorBase.permute(permutation)" modifiers="abstract">
    Permutes the qubits of the operator.

    **Parameters**

    **permutation** (`List`\[`int`]) – A list defining where each qubit should be permuted. The qubit at index j should be permuted to position permutation\[j].

    **Return type**

    `OperatorBase`

    **Returns**

    A new OperatorBase containing the permuted operator.

    **Raises**

    [**OpflowError**](qiskit.opflow.OpflowError "qiskit.opflow.OpflowError") – if indices do not define a new index for each qubit.
  </Function>

  <span id="qiskit-opflow-operatorbase-primitive-strings" />

  ### primitive\_strings

  <Function id="qiskit.opflow.OperatorBase.primitive_strings" signature="OperatorBase.primitive_strings()" modifiers="abstract">
    Return a set of strings describing the primitives contained in the Operator. For example, `{'QuantumCircuit', 'Pauli'}`. For hierarchical Operators, such as `ListOps`, this can help illuminate the primitives represented in the various recursive levels, and therefore which conversions can be applied.

    **Return type**

    `Set`\[`str`]

    **Returns**

    A set of strings describing the primitives contained within the Operator.
  </Function>

  <span id="qiskit-opflow-operatorbase-reduce" />

  ### reduce

  <Function id="qiskit.opflow.OperatorBase.reduce" signature="OperatorBase.reduce()" modifiers="abstract">
    Try collapsing the Operator structure, usually after some type of conversion, e.g. trying to add Operators in a SummedOp or delete needless IGates in a CircuitOp. If no reduction is available, just returns self.

    **Returns**

    The reduced `OperatorBase`.
  </Function>

  <span id="qiskit-opflow-operatorbase-tensor" />

  ### tensor

  <Function id="qiskit.opflow.OperatorBase.tensor" signature="OperatorBase.tensor(other)" modifiers="abstract">
    Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, X.tensor(Y) produces an X on qubit 0 and an Y on qubit 1, or X⨂Y, but would produce a QuantumCircuit which looks like

    > -\[Y]- -\[X]-

    Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

    **Parameters**

    **other** (`OperatorBase`) – The `OperatorBase` to tensor product with self.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the tensor product of self and other.
  </Function>

  <span id="qiskit-opflow-operatorbase-tensorpower" />

  ### tensorpower

  <Function id="qiskit.opflow.OperatorBase.tensorpower" signature="OperatorBase.tensorpower(other)" modifiers="abstract">
    Return tensor product with self multiple times, overloaded by `^`.

    **Parameters**

    **other** (`int`) – The int number of times to tensor product self with itself via `tensorpower`.

    **Return type**

    `Union`\[`OperatorBase`, `int`]

    **Returns**

    An `OperatorBase` equivalent to the tensorpower of self by other.
  </Function>

  <span id="qiskit-opflow-operatorbase-to-circuit-op" />

  ### to\_circuit\_op

  <Function id="qiskit.opflow.OperatorBase.to_circuit_op" signature="OperatorBase.to_circuit_op()" modifiers="abstract">
    Returns a `CircuitOp` equivalent to this Operator.

    **Return type**

    `OperatorBase`
  </Function>

  <span id="qiskit-opflow-operatorbase-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.opflow.OperatorBase.to_matrix" signature="OperatorBase.to_matrix(massive=False)" modifiers="abstract">
    Return NumPy representation of the Operator. Represents the evaluation of the Operator’s underlying function on every combination of basis binary strings. Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Return type**

    `ndarray`

    **Returns**

    The NumPy `ndarray` equivalent to this Operator.
  </Function>

  <span id="qiskit-opflow-operatorbase-to-matrix-op" />

  ### to\_matrix\_op

  <Function id="qiskit.opflow.OperatorBase.to_matrix_op" signature="OperatorBase.to_matrix_op(massive=False)" modifiers="abstract">
    Returns a `MatrixOp` equivalent to this Operator.

    **Return type**

    `OperatorBase`
  </Function>

  <span id="qiskit-opflow-operatorbase-to-spmatrix" />

  ### to\_spmatrix

  <Function id="qiskit.opflow.OperatorBase.to_spmatrix" signature="OperatorBase.to_spmatrix()">
    Return SciPy sparse matrix representation of the Operator. Represents the evaluation of the Operator’s underlying function on every combination of basis binary strings.

    **Return type**

    `spmatrix`

    **Returns**

    The SciPy `spmatrix` equivalent to this Operator.
  </Function>

  ## Attributes

  ### INDENTATION

  <Attribute id="qiskit.opflow.OperatorBase.INDENTATION" attributeValue="'  '" />

  ### instance\_id

  <Attribute id="qiskit.opflow.OperatorBase.instance_id">
    Return the unique instance id.

    **Return type**

    `int`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.opflow.OperatorBase.num_qubits">
    The number of qubits over which the Operator is defined. If `op.num_qubits == 5`, then `op.eval('1' * 5)` will be valid, but `op.eval('11')` will not.

    **Return type**

    `int`

    **Returns**

    The number of qubits accepted by the Operator’s underlying function.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.opflow.OperatorBase.parameters">
    Return a set of Parameter objects contained in the Operator.
  </Attribute>

  ### settings

  <Attribute id="qiskit.opflow.OperatorBase.settings">
    Return settings of this object in a dictionary.

    You can, for example, use this `settings` dictionary to serialize the object in JSON format, if the JSON encoder you use supports all types in the dictionary.

    **Return type**

    `Dict`

    **Returns**

    Object settings in a dictionary.
  </Attribute>
</Class>

